2.1.9
 * Cannot replace token does not exist - DN node removed as Fat Client (CASSANDRA-9871)
 * Fix handling of enable/disable autocompaction (CASSANDRA-9899)
 * Commit log segment recycling is disabled by default (CASSANDRA-9896)
 * Add consistency level to tracing ouput (CASSANDRA-9827)
 * Fix MarshalException when upgrading superColumn family (CASSANDRA-9582)
 * Fix broken logging for "empty" flushes in Memtable (CASSANDRA-9837)
 * Handle corrupt files on startup (CASSANDRA-9686)
 * Fix clientutil jar and tests (CASSANDRA-9760)
 * (cqlsh) Allow the SSL protocol version to be specified through the
   config file or environment variables (CASSANDRA-9544)
 * Remove repair snapshot leftover on startup (CASSANDRA-7357)
 * Use random nodes for batch log when only 2 racks (CASSANDRA-8735)
 * Ensure atomicity inside thrift and stream session (CASSANDRA-7757)
 * Fix nodetool info error when the node is not joined (CASSANDRA-9031)
Merged from 2.0:
 * Don't cast expected bf size to an int (CASSANDRA-9959)
 * Log when messages are dropped due to cross_node_timeout (CASSANDRA-9793)
 * checkForEndpointCollision fails for legitimate collisions (CASSANDRA-9765)
 * Complete CASSANDRA-8448 fix (CASSANDRA-9519)
 * Don't include auth credentials in debug log (CASSANDRA-9682)
 * Can't transition from write survey to normal mode (CASSANDRA-9740)
 * Scrub (recover) sstables even when -Index.db is missing, (CASSANDRA-9591)
 * Fix growing pending background compaction (CASSANDRA-9662)
 * Don't track hotness when opening from snapshot for validation (CASSANDRA-9382)


2.1.8
 * (cqlsh) Fix bad check for CQL compatibility when DESCRIBE'ing
   COMPACT STORAGE tables with no clustering columns
 * Warn when an extra-large partition is compacted (CASSANDRA-9643)
 * Eliminate strong self-reference chains in sstable ref tidiers (CASSANDRA-9656)
 * Ensure StreamSession uses canonical sstable reader instances (CASSANDRA-9700) 